# pseudo-code

./: README.md  pseudo-code.cabal
app/: Main.hs
src/: AST.hs  Evaluator.hs  Lexer.hs  Parser.hs  Runtime.hs  Token.hs
